tests/ui/with_cached_flag_return_like.stderr
error:
       When specifying `with_cached_flag = true`, the return type must be wrapped in `cached::Return<T>`.
       The following return types are supported:
       |    `cached::Return<T>`
       |    `std::result::Result<cached::Return<T>, E>`
       |    `std::option::Option<cached::Return<T>>`
       Found type: ReturnLike<i32>.
 --> tests/ui/with_cached_flag_return_like.rs:8:21
  |
8 | fn my_fn(k: i32) -> ReturnLike<i32> {
  |                     ^^^^^^^^^^
